# building_code_rag

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
backend/app/: main.py  settings.py
backend/app/api/: router.py
backend/app/api/routes/: messages.py
backend/app/schemas/: Message.py
frontend/: openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/clients/: client.gen.ts  schemas.gen.ts  types.gen.ts
scripts/: generate_client_types.sh
